Update BWYDC membership application
